--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
         android:theme="@style/AppTheme"
         android:icon="@mipmap/ic_launcher"
         android:label="ТулГУ coin">
-        <activity android:name="tinkoff.MainActivity" android:exported="true">
+        <activity
+            android:name="tinkoff.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
